Add multi-doc eSign including system-generated sanction letter config, and PLP program custom fields.
Workflow intake can configure uploaded and system signing docs without changing default paths when config is absent; program custom fields dual-write for PLP sync.

Co-authored-by: Cursor <cursoragent@cursor.com>